# KKGOperationsHub

./: TRUCK_INVENTORY_FILES.md  TRUCK_INVENTORY_IMPLEMENTATION.md  pyproject.toml  requirements.txt
app/: main.py
app/models/: __init__.py  bol_multistop_record.py  bol_multistop_row.py  bol_standard_record.py  bol_standard_row.py  truck_inventory_record.py  truck_summary.py
app/services/: bol_file_bundle_service.py  bol_multistop_docx_generator.py  bol_multistop_mapper.py  bol_multistop_parser.py  bol_pdf_merge_service.py  bol_pdf_template_stamper.py  bol_standard_docx_generator.py  bol_standard_mapper.py  bol_standard_parser.py  bol_standard_pdf_converter.py  bol_standard_pdf_generator.py  docx_generator.py  excel_reader.py  excel_reader_albertsons.py  excel_reader_sams.py  pdf_generator.py  pdf_generator_albertsons.py  pdf_generator_andersons.py  pdf_generator_sams.py  pdf_generator_sams_gci.py  truck_inventory_export.py  truck_inventory_item_setup.py  truck_inventory_load_summary.py  truck_inventory_normalizer.py  truck_inventory_pallet_calculator.py  truck_inventory_parser.py  truck_inventory_truck_assigner.py  truck_inventory_validator.py  truck_inventory_visualizer.py
app/templates/: no_recourse_bol_template.docx  standard_bol_template.docx
app/ui/: bol_generator.py  truck_inventory.py
app/utils/: bol_facilities.py  (+1 more)
tests/: test_bol_generator_parse_state.py  test_bol_pdf_merge_service.py  test_bol_pdf_template_stamper.py  test_bol_standard_docx_generator.py  test_bol_standard_parser.py  test_bol_standard_pdf_generator.py  test_pdf_generator_albertsons.py
(+3 files in other folders)
