[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kkglabelmaker"
version = "0.1.0"
description = "EOTF Shipping Label Maker"
authors = [{name="Sheraz"}]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "streamlit>=1.32.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "reportlab>=4.0.0",
    "python-docx>=1.1.2"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
